--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        android:background="#000000" >
         <activity android:name=".GalleryActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -40,5 +41,6 @@
             </intent-filter>
         </activity>
     </application>
+
 
 </manifest>
